# NITR

./: .coderabbit.yaml  .dockerignore  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  HOW_TO_CREATE_CASE.md  HOW_TO_SUBMIT.md  README.md
cases/: CMakeLists.txt
cases/002.refactor-and-reuse/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/002.refactor-and-reuse/src/: geometry.h
cases/003.reuse-existing-code/: CMakeLists.txt
cases/006.gs-isp/: TASK.md
cases/008.map-dip/src/: map_snapshot.cc  map_snapshot.h  providers_builtin.cc  providers_builtin.h
cases/021.inline-filter-entrypoint-reuse/src/: filter_parser.cc
cases/022.thermostat-sensor-decoupling/: TASK.md
cases/022.thermostat-sensor-decoupling/app/: main.cc
cases/022.thermostat-sensor-decoupling/src/: thermostat_controller.cc  thermostat_controller.h  tmp26_sensor.cc  tmp26_sensor.h
cases/023.validator-global-mutation/: CMakeLists.txt  TASK.md
cases/023.validator-global-mutation/app/: main.cc
cases/023.validator-global-mutation/src/: grader.cc  grader.h  reporter.cc  reporter.h  stats.cc  stats.h  submission.h  validator.cc  validator.h
cases/024.metric-recorder-buffered-flush/: CMakeLists.txt  TASK.md
cases/024.metric-recorder-buffered-flush/app/: main.cc
cases/024.metric-recorder-buffered-flush/src/: buffered_metric_recorder.cc  buffered_metric_recorder.h  console_metric_recorder.cc  console_metric_recorder.h  metric_collector.cc  metric_collector.h  metric_recorder.h
cases/024.recent-searches-categories/: CMakeLists.txt  TASK.md
cases/024.recent-searches-categories/app/: main.cc
cases/024.recent-searches-categories/src/: recent_searches.cc  recent_searches.h  reporter.cc  reporter.h  search.cc  search.h
cases/024.reuse-parameter-sweep/: CMakeLists.txt  TASK.md
cases/024.reuse-parameter-sweep/app/: main.cc
cases/024.reuse-parameter-sweep/src/: aggregate.cc  aggregate.h  runner.cc  runner.h  sweeps.cc  sweeps.h
cases/025.extend_benchmark_modelvmodel/: CMakeLists.txt  TASK.md
cases/025.extend_benchmark_modelvmodel/app/: main.cc
cases/025.extend_benchmark_modelvmodel/src/: benchmark_data.cc  benchmark_data.h  benchmark_record.h  benchmark_runner.cc  benchmark_runner.h  scoreboard.cc  scoreboard.h
cases/025.recent-searches-categories/: CMakeLists.txt  TASK.md
cases/025.recent-searches-categories/app/: main.cc
cases/025.recent-searches-categories/src/: recent_searches.cc  recent_searches.h  reporter.cc  reporter.h  search.cc  search.h
cases/025.session-alert-responsibilities/: CMakeLists.txt  TASK.md
cases/025.session-alert-responsibilities/app/: main.cc
cases/025.session-alert-responsibilities/src/: monitor.cc  monitor.h
cases/026.inline-filter-entrypoint-reuse-python/: CMakeLists.txt  TASK.md
cases/026.inline-filter-entrypoint-reuse-python/app/: main.py
cases/026.inline-filter-entrypoint-reuse-python/src/: filter_clause.py  filter_parser.py  filter_rule.py  filter_validation.py
cases/027.active-snapshot-lifecycle-python/: CMakeLists.txt  TASK1.md  TASK2.md  TASK3.md
cases/027.active-snapshot-lifecycle-python/app/: main.py
cases/027.active-snapshot-lifecycle-python/src/: query_result.py  query_service.py  snapshot.py  snapshot_store.py
cases/028.validator-global-mutation-python/: CMakeLists.txt  TASK.md
cases/028.validator-global-mutation-python/app/: main.py
cases/028.validator-global-mutation-python/src/: grader.py  reporter.py  stats.py  submission.py  validator.py
cases/029.thermostat-sensor-decoupling-python/: CMakeLists.txt  TASK.md
cases/029.thermostat-sensor-decoupling-python/app/: main.py
cases/029.thermostat-sensor-decoupling-python/src/: thermostat_controller.py  tmp26_sensor.py
evaluator/: CMakeLists.txt  run_evaluation_pipeline.py
evaluator/001.add-no-callsite-spread/: pipeline.json
evaluator/001.add-no-callsite-spread/checks/: check.py
evaluator/001.add-no-callsite-spread/tests/: test_add.cc
evaluator/002.refactor-and-resue/checks/: check_geometry_structure.py
evaluator/002.refactor-and-reuse/: pipeline.json
evaluator/002.refactor-and-reuse/checks/: check_geometry_structure.py
evaluator/002.refactor-and-reuse/tests/: test_geometry.cc
evaluator/003.reuse-existing-code/: pipeline.json
evaluator/003.reuse-existing-code/checks/: check_reuse_existing_step.cc  check_reuse_existing_step.py
evaluator/003.reuse-existing-code/tests/: test_cosine_similarity.cc
evaluator/004.cv-srp/: pipeline.json
evaluator/004.cv-srp/checks/: check.py  oracle_main.cc
evaluator/005.pricing-ocp/: pipeline.json
evaluator/006.gs-isp/: pipeline.json
evaluator/007.ml-lsp-multistep/: pipeline.json
evaluator/008.map-dip/: pipeline.json
evaluator/009.session-expiry-testability/: pipeline.json
evaluator/010.logging-side-effects/: pipeline.json
evaluator/011.config-sprawl/: pipeline.json
evaluator/012.cache-lifecycle/: pipeline.json
evaluator/013.stable-public-api/: pipeline.json
evaluator/014.report-export-ocp/: pipeline.json
evaluator/015.pipeline-provider-decoupling/: pipeline.json  run_hidden.sh  run_visible.sh
evaluator/016.device-segment-planner/: pipeline.json
evaluator/017.active-snapshot-lifecycle/: pipeline.json
evaluator/018.seeded-selection-testability/: pipeline.json
evaluator/019.ranking-explainability-boundary/: pipeline.json
evaluator/020.handover-packet-ownership-boundary/: pipeline.json
evaluator/021.inline-filter-entrypoint-reuse/: pipeline.json
evaluator/022.thermostat-sensor-decoupling/: pipeline.json
evaluator/023.validator-global-mutation/: pipeline.json
evaluator/024.metric-recorder-buffered-flush/: pipeline.json
evaluator/025.session-alert-responsibilities/: pipeline.json
evaluator/026.inline-filter-entrypoint-reuse-python/: pipeline.json
evaluator/027.active-snapshot-lifecycle-python/: pipeline.json
evaluator/028.validator-global-mutation-python/: pipeline.json
evaluator/029.thermostat-sensor-decoupling-python/: pipeline.json
evaluator/shared/: __init__.py  check_output.py  check_utils.py  context.py  path_checks.py  source_analysis.py
(+290 files in other folders)
